# monolith

./: LICENSE  README.md  pyproject.toml
src/monolith/: main.py
